# Visao-Computacional

./: .gitignore  README.md  entrega3.ipynb  entrega4-2.ipynb  entrega4.ipynb  entrega5.ipynb  notebook.ipynb  pyproject.toml
ISIC-images/: metadata.csv
Modelos/grid_unfrozen/: historicos_grid.json
imagens_acrais_benignas/: attribution.txt  metadata.csv
imagens_acrais_maligno/: attribution.txt  metadata.csv
