[project]
name = "visao-computacional"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.21.0",
    "tf-keras>=2.21.0",
    "transformers>=5.12.0",
]

[tool.uv.workspace]
members = [
    "Code",
]
